# wikidatabots

./: .gitignore  AGENTS.md  Dockerfile  P345_report.py  P444.py  P444_Q21039459.py  P4947.py  P4947_imdb_reference.py  P4947_references.py  P4947_report.py  P4983.py  P4983_freebase_reference.py  P4983_imdb_reference.py  P4983_next.py  P4983_report.py  P4983_tvdb_reference.py  P4985.py  P4985_freebase_reference.py  P4985_imdb_reference.py  P4985_report.py  P6398.py  P6398_report.py  P6998_report.py  P9586.py  P9586_report.py  Q163872.nt  README.md  __main__.py  actions.py  appletv.py  appletv_etl.py  arrow2parquet.py  cloudformation.yaml  constants.py  deprecatestatements.py  df_upsert.py  entrypoint.sh  fancystatements.py  found_P6398.py  imdb.py  (+111 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: P345-report.yml  P4947-bot.yml  P4947-report.yml  P4983-report.yml  P4985-bot.yml  P4985-report.yml  P6398-report.yml  appletv-etl.yml  black.yml  bot.yml  ci.yml  daily-report.yml  docker.yml  flake8.yml  itunes-etl.yml  lint-workflows.yml  lint.yml  matches.yml  merge.yml  metrics.yml  opencritic-etl.yml  plex-etl.yml  pytest.yml  reports.yml  tasks.yml  test.yml  tmdb-etl.yml  tmdb.yml  weekly-reports.yml  weekly-tasks.yml  wikidata-etl.yml
.github/workflows/P4947/: P4947-report.yml
appletv_etl/: __init__.py  __main__.py  test_appletv_etl.py
plex_etl/: __init__.py  plex_library.py  test_plex_etl.py  test_utils.py  test_wikidata.py  utils.py  wikidata.py
