[project]
name = "wikidatabots"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "backoff>=2,<3",
    "beautifulsoup4>=4.11,<5",
    "feedparser>=6,<7",
    "lxml>=6,<7",
    "numpy>=1,<3",
    "polars>=1,<2",
    "rdflib>=7,<8",
    "requests>=2,<3",
    "tqdm>=4,<5",
    "wikidata-rdf-patch @ git+https://github.com/josh/wikidata-rdf-patch.git@v0.1.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6,<7",
    "mypy>=1,<2",
    "pytest>=8,<9",
    "ruff>=0.4",
    "types-beautifulsoup4>=4.11,<5",
    "types-requests>=2,<3",
    "types-tqdm>=4,<5",
    "vulture>=2,<3",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true

[tool.pyright]

[tool.vulture]
exclude = [ "*test_*.py" ]
ignore_names = [ "formatwarning", "status", "put_throttle", "maxlag" ]
