[project]
name = "wikidatabots"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "backoff>=2.2.1,<3",
    "beautifulsoup4>=4.13,<5",
    "feedparser>=6,<7",
    "lxml>=6,<7",
    "numpy>=2.3,<3",
    "polars>=1.31,<2",
    "rdflib>=7.1,<8",
    "requests>=2.32,<3",
    "tqdm>=4.67,<5",
    "wikidata-rdf-patch @ git+https://github.com/josh/wikidata-rdf-patch.git@v1.0.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.135,<7",
    "mypy>=1.16,<2",
    "pytest>=8.4,<10",
    "ruff>=0.12,<2",
    "types-beautifulsoup4>=4.12,<5",
    "types-requests>=2.32,<3",
    "types-tqdm>=4.67,<5",
    "vulture>=2.14,<3",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true

[tool.vulture]
exclude = [ "*test_*.py" ]
ignore_names = [ "formatwarning", "status" ]
